--- a/backend/metadata/tables.yaml
+++ b/backend/metadata/tables.yaml
@@ -1966,7 +1966,9 @@
       - alt
       - created_at
       - id
+      - original_height
       - original_url
+      - original_width
       - type
       - updated_at
       - uploader_uuid
@@ -1980,20 +1982,28 @@
       set:
         uploader_uuid: x-hasura-User-Id
       columns:
+      - original_height
+      - original_width
+      - id
       - alt
       - original_url
       - type
+      - created_at
+      - updated_at
       - uploader_uuid
+      - uuid
       backend_only: false
   select_permissions:
   - role: super_admin
     permission:
       columns:
-      - alt
-      - created_at
+      - original_height
+      - original_width
       - id
+      - alt
       - original_url
       - type
+      - created_at
       - updated_at
       - uploader_uuid
       - uuid
@@ -2001,6 +2011,8 @@
   - role: user
     permission:
       columns:
+      - original_height
+      - original_width
       - id
       - alt
       - original_url
@@ -2014,11 +2026,13 @@
   - role: super_admin
     permission:
       columns:
-      - alt
-      - created_at
+      - original_height
+      - original_width
       - id
+      - alt
       - original_url
       - type
+      - created_at
       - updated_at
       - uploader_uuid
       - uuid
@@ -2027,13 +2041,22 @@
   - role: user
     permission:
       columns:
+      - original_height
+      - original_width
+      - id
       - alt
       - original_url
       - type
+      - created_at
+      - updated_at
+      - uploader_uuid
+      - uuid
       filter:
         uploader_uuid:
           _eq: X-Hasura-User-Id
       check: null
+      set:
+        uploader_uuid: x-hasura-User-Id
   delete_permissions:
   - role: super_admin
     permission:
