--- a/mobile/package.json
+++ b/mobile/package.json
@@ -29,6 +29,7 @@
     "@react-navigation/stack": "^5.2.16",
     "@sentry/react-native": "^1.9.0",
     "currency.js": "^2.0.3",
+    "date-fns": "^2.16.1",
     "expo-asset": "~8.1.7",
     "expo-av": "~8.2.1",
     "expo-blur": "~8.1.2",
