--- a/mobile/package.json
+++ b/mobile/package.json
@@ -51,6 +51,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-elements": "^3.0.0-alpha.1",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-modal": "^11.5.6",
     "react-native-reanimated": "^1.9.0",
     "react-native-redash": "^15.11.1",
