--- a/mobile/package.json
+++ b/mobile/package.json
@@ -46,6 +46,7 @@
     "expo-web-browser": "~8.3.1",
     "graphql": "^15.3.0",
     "graphql-ws": "^1.12.0",
+    "lottie-react-native": "^3.5.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
